# qcd_ml_accel_dirac

./: .gitignore  README.md  benchmark_size.py  findgamma5.py  gptsimple.py  meson.build  pyproject.toml  requirements.txt  setup.py  try_compl_tens.py  trymask.py
csrc/: meson.build  pyproject.toml
csrc/qcd_ml_accel_dirac_cpp/: ops.py
prog/: plaq_try.py  simple_prog.py  subdirmod.py  where_module.py  where_ops.py
pysrc/: meson.build  pyproject.toml
pysrc/qcd_ml_accel_dirac/: __init__.py  dirac.py
qcd_ml_accel_dirac/: __init__.py  compat.py  cppops.cpp  dirac.cpp  dirac.hpp  dirac.py  dirac_class.py  dirac_lookup.cpp  dirac_nohop.cpp  dirac_purec.cpp  domain_wall.cpp  domainwall.cpp  gamma.hpp  gamma_purec.hpp  gaugemul.cpp  gaugemul.hpp  grads.py  indexfunc.hpp  indexfunc_purec.hpp  matmul.cpp  muladd.cpp  muladd.hpp  muladd.py  ops.py  plaq.cpp  plaq.hpp  plaq_p.py
qcd_ml_accel_dirac/csrc/: clover_avx.cpp  clover_avx_grid.cpp  clover_avx_grid_backw.cpp  complload256d.hpp  complload_avx.hpp  complmath256d.hpp  complmath_avx.hpp  cppops.cpp  dirac.hpp  dirac_avx.hpp  dirac_simd.cpp  dirac_simd.hpp  gamma.hpp  gamma_avx.hpp  indexfunc_double.hpp  wilson_avx.cpp  wilson_avx_backw.cpp
src/qcd_ml_accel_dirac/: __init__.py  ops.py
src/qcd_ml_accel_dirac/csrc/: cppops.cpp  wilson.hpp
src/qcd_ml_accel_dirac_cpp/: __init__.py  cppops.cpp  wilson.hpp
test/: conftest.py  test_01_dirac.py  test_01_mul.py  test_02_convert.py  test_02_dirac.py  test_02_mul.py  test_03_benchmark.py  test_03_dirac.py  test_04_bench_dirac.py  test_04_bench_plaq.py  test_05_bench_size.py  test_05_domain_wall.py  test_06_bench_solver.py  test_06_dirac_grad.py  test_07_plaq.py  test_08_bench_dirac.py  test_08_convert.py  test_08_domain_wall.py  test_09_bench_cdirac.py  test_09_bench_decompose.py  test_09_domain_wall.py  test_10_bench_dirac_gpt.py  test_10_bench_matmul.py  test_11_bench_dirac_simd.py  test_12_bench_dirac_simd_size.py  test_13_bench_dirac_simd_size_varied.py  test_13_bench_no_gpt.py  test_13_bench_only_gpt.py  test_bm_01_dirac.py  test_bm_01_torch_dirac.py  test_bm_02_torch_plaq.py  test_bm_03_solver.py  test_bm_03_torch_solver.py  test_bm_04_dirac.py  test_bm_04_plaq.py  test_bm_05_dirac_avx.py  test_bm_05_dirac_gpt.py  test_bm_06_dirac_simd.py  test_compl_convert.py  test_subprocess.py
