[project]
name = "qcd_ml_accel_dirac"
authors = [
    {name="Nico Voß"}
]
description = "higher performant functions for qcd_ml"
requires-python=">=3.4"
dependencies=['torch >= 2.4.0']
version="0.0.6"


[build-system]
requires = ["torch", "setuptools", "ninja", "wheel"]
build-backend = "setuptools.build_meta"
